--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           },
@@ -119,6 +120,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "finalspi-app"
+    }
+  },
+  "defaultProject": "finalspi-app",
+  "cli": {
+    "analytics": "2ff2b3ee-0cbf-4ab1-b621-56caafb49c28"
+  }
 }
